# Smmartconnect

./: .gitignore  README.md  db.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
tests/: test_db.py  test_delete.py
views/: add_mission_view.py  add_tool_view.py  add_user_view.py  add_vehicle_view.py  dashboard_view.py  employee_details_view.py  employees_view.py  login_view.py  missions_view.py  settings_view.py  tools_view.py  vehicles_view.py
